--- a/plop-template/componentStories.hbs
+++ b/plop-template/componentStories.hbs
@@ -14,6 +14,6 @@ export default {
 	decorators: [withKnobs],
 };
 
-export const knobsBtn = () => (
+export const knobs{{headCaps name}} = () => (
     <{{headCaps name}} />
 );
